--- a/src/components/Dashboard/Dashboard.css
+++ b/src/components/Dashboard/Dashboard.css
@@ -1,5 +1,6 @@
 .rechart{
     display: flex;
     justify-content: space-between;
-    background-color:lightseagreen;
+    background-color:lightgoldenrodyellow;
+   
 }
