--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -3,75 +3,53 @@
     background-color: black;
     color: lightgreen;
 }
-.product-info{
-    padding:30px 30px;
-    margin-top: 60px;
-}
-
-.product-image img{
-    width: 500px;
-    height: 500px;
+.product-title{
+    margin-top: 150px;
+    margin-left: 50px;
+    margin-right: 50px;
 
 }
-.btn-info{
+.product-img img{
+    width:500px;
+}
+.btn-info {
     background-color: lightgreen;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    font-size: 15px;
-    font-weight: bold;
-}
-.btn-info:hover{
-    color: red;
-   
-}
-.review-title{
-    padding-top: 30px;
-    padding-bottom: 30px;
+    width: 20%;
+    height: 10%;
     color: black;
-}
-.review-detail{
-    background-color:lightgreen;
-}
-.review-info{
-    border: 1px solid red;
-    background-color: black;
-    color: black;
-}
-.btn-review{
-    background-color: orange;
-    color: black;
-    font-size: 20px;
-    font-weight: bold;
-    margin-top: 30px;
-    margin-bottom: 30px;
-    padding-top: 20px;
-    padding-bottom: 20px;
-}
-.review-1{
-    background-color: bisque;
-    padding-bottom: 20px;
-}
-.review-2{
-    background-color: lightseagreen;
-    padding-bottom: 20px;
-}
-.review-3{
-    background-color: lightslategray;
-    padding-bottom: 20px;
-}
-.review-4{
-    background-color: lightblue;
-    padding-bottom: 20px;
-}
-.review-5{
-    background-color: lightsalmon;
-    padding-bottom: 20px;
-}
-.review-6{
-    background-color: lightpink;
-    padding-bottom: 20px;
-}
-.paragraph{
     font-size: 20px;
     font-weight: 400;
+}
+.btn-info:hover{
+    background-color: brown;
+}
+.review-title{
+    background-color: lightpink;
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
+.homecart{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    grid-gap:20px;
+    background-color: lightgreen;
+    
+}
+.title{
+    background-color:black;
+    color: lightgreen;
+    padding-top: 200px;
+    margin-left: 10px;
+    margin-right: 10px;
+}
+.btn-review{
+    width: 20%;
+    background-color: palevioletred;
+    font-size: 25px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    font-weight: bold;
+}
+.btn-review:hover{
+    background-color: red;
 }
